--- a/src/scss/sections/products.scss
+++ b/src/scss/sections/products.scss
@@ -18,7 +18,7 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
-        margin: -5px;
-        max-width: 100%;
+        width: 100%;
+        padding: -5px;
     }
 }
